--- a/POST-IT/post_it1.css
+++ b/POST-IT/post_it1.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
+    color: #FFFFFF;
 }
 body{
 padding: 0;
@@ -67,7 +68,7 @@ padding: 0;
     padding-top: 5px;
     padding-left: 20px;
 }
-.logo1{
+.logo1,.r_logo1{
     height: 23px;
     padding-right: 10px;
     margin-top: 4px;
@@ -88,7 +89,7 @@ padding: 0;
     cursor: pointer;
 }
 
-/* Sidebar */
+/* Left Sidebar by Ranadheer*/
 
 
 
@@ -99,7 +100,7 @@ padding: 0;
 
 
 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+/* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
 
@@ -355,7 +356,160 @@ color: #FFFFFF;
     align-items: center;
     font-size: 100%;
     color: #FFFFFF;
-    }
+    } */
+
+/* Middle Part by Shivaji and Hemanth*/
 
 
-/* Middle Part */
+
+
+
+
+.middle{
+    position: absolute;
+    left: 325px;
+    width: 750px;
+}
+.box_1{
+    margin-top: 50px;
+    padding: 20px;
+    background-color: #084D6A;
+    border-radius: 50px;
+    height: 350px;
+}
+.min_box_1{
+    display: flex;
+}
+.pic_total{
+    display: flex;
+}
+
+.profile_pic{
+    padding-left: 15px;
+}
+.box_2{
+    margin-top: 20px;
+    padding: 20px;
+    background-color:#0B7AAA;
+    border-radius: 50px;
+    height: 255px;
+}
+.random_info{
+    padding-left: 20px;
+    padding-top: 5px;
+}
+.like_comm{
+    padding-top: 30px;
+    display: flex;
+    padding-left: 600px;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+  padding-left: 500px;
+}
+.like_btn{
+    margin-right: 20px;
+    height: 25px;
+    width: 25px;
+}
+.like_btn:checked::after{
+    content: url(exp/afterlike.png);
+}
+.comment_btn{
+    margin-right: 20px;
+    height: 25px;
+    width: 25px;
+}
+.namebox{
+    padding-top: 15px;
+}
+.like_btn:hover,.comment_btn:hover,.material-symbols-outlined:hover{
+    cursor: pointer;
+}
+
+/* Middle part by Ranadheer, Shivaji and Hemanth*/
+
+
+
+
+
+
+
+
+
+
+
+
+.right_sidebar{
+    padding: 50px;
+    position: fixed;
+    right: 0%;
+    /* background-color: black; for reference only*/
+    height: 100%;
+    width: 450px;
+}
+.search{
+    display: flex;
+    align-self: center;
+    justify-content: left;
+    padding-left: 15px;
+}
+.search_text{
+    color: #FFFFFF;
+}
+.search_bar{
+    padding: 20px;
+    background-color: #084D6A;
+    border-radius: 50px;
+    width: 350px;
+}
+.trending{
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+}
+.trending_text{
+    color: #0B7AAA;
+    font-size: 35px;
+}
+.r_material_down{
+    padding-top: 50px;
+    position: fixed;
+}
+.r_placehold_image{
+    border-radius: 50px;
+    right: 70px;
+    width: 310px;
+    height: 130px;
+}
+.bigbox{
+    position: fixed;
+    background-color: #084D6A;
+    width: 350px;
+    height: 220px;
+    padding: 20px;
+    border-radius: 50px;
+}
+.one_text{
+    padding-bottom: 15px;
+    padding-left: 10px;
+    color: #FFFFFF;
+}
+.r_logo1{
+    height: 23px;
+    padding-right: 10px;
+    margin-top: 4px;
+}
+.r_logo2{
+    margin: 12px;
+    width: 25px;
+    height: 25px;
+}
+
+/* Right Sidebar by Ranadheer */
+
+
