--- a/Post-it/styles.css
+++ b/Post-it/styles.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Inter', sans-serif;
+}
+
 body {
   background-color: #0b7aaa;
 }
@@ -19,4 +23,57 @@ body {
   border-radius: 0px;
   width: 40%;
   height: 55%;
+}
+
+.postit{
+  display: flex;
+  position: fixed;
+  left:110px;
+  top: 20px;
+  width: 80%;
+  justify-content: space-between;
+
+}
+.title{
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+}
+.title>img{
+  height: 25px;
+  width: 25px;
+  margin-right: 5px;
+}
+.titleText{
+  color: #ffffff;
+  font-size: 45px;
+}
+
+.content{
+  width: 260px;
+}
+
+.desc{
+  font-size: 20px;
+  color:#ffffff;
+}
+
+.login{
+  display: flex;
+  width: 200px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.login>p{
+  font-size: 25px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-left: 24px;
+
+}
+
+.login>p::hover{
+  cursor: pointer;
+
 }
