--- a/SRC/public/stylesheets/userforms.css
+++ b/SRC/public/stylesheets/userforms.css
@@ -1,124 +1,88 @@
-/* Bordered form */
-form.lrform {
-    border: 3px solid #f1f1f1;
-}
-  
-/* Full-width inputs */
-input[type=email], input[type=password], input[type=text], textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
+* {
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 
-/* Set a style for all buttons */
-button.lrform-btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
-
-/* Add a hover effect for buttons */
-button.lrform-btn:hover {
-    opacity: 0.8;
-}
-
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-}
-
-/* Add padding to containers */
-.container1 {
+.container {
+    background-color: #cee9f5;
+    border-radius: 50px;
     padding: 20px;
-    background-color: white;
+    margin: 40px;
+    height: 670px;
+
 }
 
-.formDiv {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 100px;
+.container2 {
+    background-color: #cee9f5;
+    border-radius: 50px;
+    padding: 20px;
+    margin: 40px;
+    height: 1200px;
+
 }
 
-@media (min-width: 540px) {
-    .formDiv {
-        width: 70%;
-        margin-left: 15%;
-        margin-right: 15%;
-    }
+.register_name {
+    font-size: 50px;
+    padding-left: 110px;
+    padding-top: 30px;
+    padding-bottom: 80px;
 }
 
-@media (min-width: 821px) {
-    .formDiv {
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-    }
+.login_name {
+    font-size: 50px;
+    padding-left: 130px;
+    padding-top: 30px;
+    padding-bottom: 80px;
 }
 
-@media (min-width: 1280px) {
-    .formDiv {
-        width: 45%;
-        margin-left: 27.5%;
-        margin-right: 27.5%;
-    }
+input[type="text"], input[type="password"], input[type="email"],
+input[type="number"] {
+    border-radius: 50px;
+    width: 400px;
+    height: 50px;
+    padding-left: 15px;
 }
 
-.formDivLr {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 100px;
+.form {
+    padding-left: 530px;
 }
 
-@media (min-width: 482px) {
-    .formDivLr {
-        width: 70%;
-        margin-left: 15%;
-        margin-right: 15%;
-    }
+.login_btn {
+    color: #ffffff;
+    background-color: #0B7AAA;
+    width: 400px;
+    border-radius: 50px;
+    height: 30px;
 }
 
-@media (min-width: 821px) {
-    .formDivLr {
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-    }
+.username, .full_name, .email, .age, .password {
+    font-size: larger;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
-@media (min-width: 973px) {
-    .formDivLr {
-        width: 45%;
-        margin-left: 27.5%;
-        margin-right: 27.5%;
-    }
+.login_btn:hover {
+    cursor: pointer;
+    background-color: #084D6A;
 }
 
-@media (min-width: 1143px) {
-    .formDivLr {
-        width: 30%;
-        margin-left: 35%;
-        margin-right: 35%;
-    }
+.gender {
+    width: 400px;
+    font-size: larger;
+    padding-bottom: 10px;
 }
 
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn {
-        width: 100%;
-    }
+.extra_button {
+    width: 400px;
+    border-radius: 50px;
+    height: 30px;
+    margin-left: 530px;
 }
-.lowerText {
-    float: right;
-    padding-top: 16px;
+
+.extra_button-r {
+    width: 400px;
+    border-radius: 50px;
+    height: 30px;
 }
+
+/* Login and Register Page by Ranadheer */
