--- a/SRC/views/dashboard.ejs
+++ b/SRC/views/dashboard.ejs
@@ -32,27 +32,38 @@
 
 <!--<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Open</span>-->
 
-
+<!-- sidebar by Ranadheer -->
+<!--Left sidebar-->
 <div class="full_sidebar">
     <div class="material_top">
         <div class="post_icon">
-            <div class="seeker">
-                <img class="logo1" src="../public/images/SeekPng1.png" alt="">
-                <h2 class="post_text">Post-It</h2>
-            </div>
+            <a href="/">
+                <div class="seeker">
+                    <img class="logo1"
+                         src="https://vitamin2001.in/softengg/SeekPng%201.png"
+                         alt="">
+                    <h2 class="post_text">Post-It</h2>
+                </div>
         </div>
+        </a>
         <div class="explore">
-            <img class="logo2" src="../public/images/compass.png" alt="">
+            <img class="logo2"
+                 src="https://vitamin2001.in/softengg/compass.png"
+                 alt="">
             <h2 class="explore_text">Explore</h2>
         </div>
         <div class="settings">
-            <img class="logo3" src="../public/images/settings.png" alt="">
+            <img class="logo3"
+                 src="https://vitamin2001.in/softengg/settings.png"
+                 alt="">
             <h2 class="settings_text">Settings</h2>
         </div>
     </div>
     <div class="material_down">
         <div class="name_bigbox">
-            <img class="placehold_image" src="../public/images/P1120783.JPG" alt="img not available">
+            <img class="placehold_image"
+                 src="https://vitamin2001.in/softengg/P1120783.JPG"
+                 alt="img not available">
             <div class="name_container">
                 <!-- Flash Message -->
                 <% if (message && message.length > 0) { %>
@@ -73,99 +84,216 @@
         </div>
     </div>
 </div>
-<!-- sidebar by Ranadheer -->
 
-<!-- Center --- Blogs -->
+<!--right side sidebar-->
 
-<div class="main">
-    <div class="rec8">
-        <div class="p1 ellipse">
-            <a href="/users/newblog">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                     class="bi bi-pencil-square"
-                     viewBox="0 0 16 16">
-                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                    <path fill-rule="evenodd"
-                          d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                </svg>
-            </a>
 
-            <form action="/users/newblog" method="POST">
-                <div class="container1">
-                    <h1>New Blog</h1>
-                    <label for="inputTitle"><strong>Title*</strong></label>
-                    <input id="inputTitle" type="text" name="title" placeholder="Title">
-                    <label for="inputImg"><strong>Image URL</strong></label>
-                    <input id="inputImg" type="text" name="img" placeholder="Image Url">
-                    <label for="inputText"><strong>Text*</strong></label>
-                    <textarea id="inputText" name="text" rows="10"></textarea>
-                    <label for="inputCat"><strong>Category* </strong></label>
-                    <select id="inputCat" name="category">
-                        <option value="Technology">Technology</option>
-                        <option value="Health">Health</option>
-                        <option value="Business">Business</option>
-                        <option value="Food">Food</option>
-                        <option value="Culture">Culture</option>
-                        <option value="Travel">Travel</option>
-                        <option value="Video Games">VideoGames</option>
-                        <option value="Science">Science</option>
-                        <option value="Relationships">Relationships</option>
-                        <option value="Politics">Politics</option>
-                    </select>
-                    <button class="lrform-btn" type="submit">Post</button>
-                </div>
-            </form>
+<div class="right_sidebar">
+    <div class="r_material_top">
+        <div class="search_bar">
+            <div class="search">
+                <img class="r_logo1"
+                     src="https://vitamin2001.in/softengg/search.png"
+                     alt="">
+                <h2 class="search_text">Search</h2>
+            </div>
         </div>
-    </div>
-    <!--Type box-->
-
-
-    <div>
-
-        <% if (blogs.length == 0) { %>
-            <h1 id="noBlogH1">Sorry!! No Blogs Found!!</h1>
-        <% } else { %>
-        <div class="container">
-            <% blogs.forEach(function(blog){ %>
-                <div class="rec7">
-                    <div class="p1 ellipse">
-                        <div style="text-align:left;">Posted By <%= blog.author %> </div>
-
-                        <h2 style="text-align:center"><%= blog.title %></h2>
-                        <img class="image" src="<%= blog.imgURL %>"><br>
-
-                        <div class="p2"><%= blog.blogText.substring(0, 100) %></div>
-
-                        <!--                        <span id="author-span">By  on <%= blog.dateofPublish %></span>-->
-                        <!--                        <span id="category-span">Category: <%= blog.category %></span>-->
-
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8%" height="8%" fill="currentColor"
-                             class="bi bi-heart"
-                             viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                        </svg>
-
-                        <svg xmlns="http://www.w3.org/2000/svg" width="7.5%" height="7.5%" fill="currentColor"
-                             class="bi bi-chat-left" viewBox="0 0 16 16">
-                            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-                        </svg>
-
-                    </div>
-
-
+        <div class="trending">
+            <img class="r_logo2"
+                 src="https://vitamin2001.in/softengg/Vector%20%282%29.png"
+                 alt="">
+            <h2 class="trending_text">Trending</h2>
+        </div>
+        <div class="r_material_down">
+            <div class="bigbox">
+                <div class="one_text">
+                    One Piece is going to end in 5 years!! : Echiro Oda
                 </div>
-
-            <% }); %>
-
-            <% } %>
+                <img class="r_placehold_image"
+                     src="https://vitamin2001.in/softengg/wanpisu.jpg"
+                     alt="img not available">
+            </div>
         </div>
     </div>
 </div>
 
 
-<!-- JS Scripts -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="scripts/dashboard.js"></script>
+<!-- Center --- Blogs -->
+
+<!--New post input-->
+
+
+<div class="middle">
+    <div class="box_1">
+        <div class="min_box_1">
+            <div class="pic_total">
+                <img src="https://vitamin2001.in/softengg/P1120783.JPG"
+                     alt="img" class="placehold_image">
+                <div class="namebox">
+                    <div class="pic_name">
+                        Name
+                    </div>
+                    <div class="pic_tag">
+                        @Name123
+                    </div>
+                </div>
+            </div>
+            <span class="material-symbols-outlined">
+                    edit_square
+                </span>
+        </div>
+        <form action="/users/newblog" method="POST">
+            <div class="container1">
+                <label for="inputTitle"><strong>Title*</strong></label>
+                <input id="inputTitle" type="text" name="title" placeholder="Title">
+                <br>
+                <!--                <label for="inputImg"><strong>Image URL</strong></label>-->
+                <!--                <input id="inputImg" type="text" name="img" placeholder="Image Url">-->
+                <label for="inputText"><strong>Text*</strong></label>
+                <textarea id="inputText" name="text" rows="10"></textarea>
+                <!--                <label for="inputCat"><strong>Category* </strong></label>-->
+                <!--                <select id="inputCat" name="category">-->
+                <!--                    <option value="Technology">Technology</option>-->
+                <!--                    <option value="Health">Health</option>-->
+                <!--                    <option value="Business">Business</option>-->
+                <!--                    <option value="Food">Food</option>-->
+                <!--                    <option value="Culture">Culture</option>-->
+                <!--                    <option value="Travel">Travel</option>-->
+                <!--                    <option value="Video Games">VideoGames</option>-->
+                <!--                    <option value="Science">Science</option>-->
+                <!--                    <option value="Relationships">Relationships</option>-->
+                <!--                    <option value="Politics">Politics</option>-->
+                <!--                </select>-->
+                <button class="lrform-btn" type="submit">Post</button>
+            </div>
+        </form>
+    </div>
+
+    <!--Display Posts-->
+
+    <% if (blogs.length == 0) { %>
+        <h1 id="noBlogH1">Sorry!! No Blogs Found!!</h1>
+    <% } else { %>
+
+        <% blogs.forEach(function(blog){ %>
+            <div class="container">
+                <div class="box_2">
+                    <div class="pic_total">
+                        <img src="https://vitamin2001.in/softengg/P1120783.JPG"
+                             alt="img" class="placehold_image">
+                        <div class="namebox">
+                            <div class="pic_name">
+                                Posted by
+                            </div>
+                            <div class="pic_tag">
+                                <%= blog.author %>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="random_info">
+                        <h3>                       <%= blog.title %>  </h3>
+                        <!--                        <img class="image" src="<%= blog.imgURL %>"><br>-->
+                        <%= blog.blogText.substring(0, 100) %>
+                    </div>
+                    <div class="like_comm">
+                        <img src="https://vitamin2001.in/softengg/like.png" alt="like" class="like_btn">
+                        <img src="https://vitamin2001.in/softengg/comment.png" alt="img" class="comment_btn">
+                        <!--                        <span id="author-span">By  on <%= blog.dateofPublish %></span>-->
+                        <!--                        <span id="category-span">Category: <%= blog.category %></span>-->
+                    </div>
+                </div>
+            </div>
+
+        <% }); %>
+
+    <% } %>
+
+    <!--not used codes -->
+
+    <!--<div class="main">-->
+    <!--    <div class="rec8">-->
+    <!--        <div class="p1 ellipse">-->
+    <!--            <a href="/users/newblog">-->
+    <!--                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"-->
+    <!--                     class="bi bi-pencil-square"-->
+    <!--                     viewBox="0 0 16 16">-->
+    <!--                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>-->
+    <!--                    <path fill-rule="evenodd"-->
+    <!--                          d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>-->
+    <!--                </svg>-->
+    <!--            </a>-->
+
+    <!--            <form action="/users/newblog" method="POST">-->
+    <!--                <div class="container1">-->
+    <!--                    <h1>New Blog</h1>-->
+    <!--                    <label for="inputTitle"><strong>Title*</strong></label>-->
+    <!--                    <input id="inputTitle" type="text" name="title" placeholder="Title">-->
+    <!--                    <label for="inputImg"><strong>Image URL</strong></label>-->
+    <!--                    <input id="inputImg" type="text" name="img" placeholder="Image Url">-->
+    <!--                    <label for="inputText"><strong>Text*</strong></label>-->
+    <!--                    <textarea id="inputText" name="text" rows="10"></textarea>-->
+    <!--                    <label for="inputCat"><strong>Category* </strong></label>-->
+    <!--                    <select id="inputCat" name="category">-->
+    <!--                        <option value="Technology">Technology</option>-->
+    <!--                        <option value="Health">Health</option>-->
+    <!--                        <option value="Business">Business</option>-->
+    <!--                        <option value="Food">Food</option>-->
+    <!--                        <option value="Culture">Culture</option>-->
+    <!--                        <option value="Travel">Travel</option>-->
+    <!--                        <option value="Video Games">VideoGames</option>-->
+    <!--                        <option value="Science">Science</option>-->
+    <!--                        <option value="Relationships">Relationships</option>-->
+    <!--                        <option value="Politics">Politics</option>-->
+    <!--                    </select>-->
+    <!--                    <button class="lrform-btn" type="submit">Post</button>-->
+    <!--                </div>-->
+    <!--            </form>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--</div>-->
+
+
+    <!--    <% if (blogs.length == 0) { %>-->
+    <!--        <h1 id="noBlogH1">Sorry!! No Blogs Found!!</h1>-->
+    <!--    <% } else { %>-->
+    <!--    <div class="container">-->
+    <!--        <% blogs.forEach(function(blog){ %>-->
+    <!--            <div class="rec7">-->
+    <!--                <div class="p1 ellipse">-->
+    <!--                    <div style="text-align:left;">Posted By <%= blog.author %> </div>-->
+
+    <!--                    <h2 style="text-align:center"><%= blog.title %></h2>-->
+    <!--                    <img class="image" src="<%= blog.imgURL %>"><br>-->
+
+    <!--                    <div class="p2"><%= blog.blogText.substring(0, 100) %></div>-->
+
+    <!--                    &lt;!&ndash;                        <span id="author-span">By  on <%= blog.dateofPublish %></span>&ndash;&gt;-->
+    <!--                    &lt;!&ndash;                        <span id="category-span">Category: <%= blog.category %></span>&ndash;&gt;-->
+
+    <!--                    <svg xmlns="http://www.w3.org/2000/svg" width="8%" height="8%" fill="currentColor"-->
+    <!--                         class="bi bi-heart"-->
+    <!--                         viewBox="0 0 16 16">-->
+    <!--                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>-->
+    <!--                    </svg>-->
+
+    <!--                    <svg xmlns="http://www.w3.org/2000/svg" width="7.5%" height="7.5%" fill="currentColor"-->
+    <!--                         class="bi bi-chat-left" viewBox="0 0 16 16">-->
+    <!--                        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>-->
+    <!--                    </svg>-->
+
+    <!--                </div>-->
+
+
+    <!--            </div>-->
+
+    <!--        <% }); %>-->
+
+    <!--        <% } %>-->
+    <!--    </div>-->
+
+    <!-- JS Scripts -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="scripts/dashboard.js"></script>
 
 <%- include("partials/footer") %>
