--- a/SRC/views/home.ejs
+++ b/SRC/views/home.ejs
@@ -1,20 +1,64 @@
-<%- include("partials/header") %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Post-it</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,600,700&display=swap" rel="stylesheet">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
 
-<div class="topnav">
-    <a id="homeNav" class="active" href="/"><i class="fas fa-blog"></i> Post it</a>
-    <a href="/users/newblog">New Post</a>
-    <a id="signinLink" href="/users/login">Sign in</a>
+</head>
+<body>
+<img class="vector1"
+     src="https://vitamin2001.in/softengg/Vector.png"
+     alt="vector">
+
+<img class="image1"
+     src="https://vitamin2001.in/softengg/SeekPng%209.png"
+     alt="image">
+<div class="postit">
+    <div class="content">
+        <div class="title">
+            <img src="https://vitamin2001.in/softengg/SeekPng%201.png"
+                 alt="">
+            <div class="titleText">Post-It</div>
+        </div>
+        <div class="desc">
+            Post-It is a Micro-Blogging
+            platform where users can
+            express themselves.
+        </div>
+    </div>
+    <div class="login">
+        <a href="/users/login">
+            <button class="button">Login</button>
+        </a>
+        <a href="/users/register">
+            <button class="button">Register</button>
+        </a>
+    </div>
+
 </div>
+<script src="" async defer></script>
 
-<% let x = Math.floor((Math.random() * 10)); %>
+<!--<div class="topnav">-->
+<!--    <a id="homeNav" class="active" href="/"><i class="fas fa-blog"></i> Post it</a>-->
+<!--    <a href="/users/newblog">New Post</a>-->
+<!--    <a id="signinLink" href="/users/login">Sign in</a>-->
+<!--</div>-->
 
-<div class="regisbtnDiv">
-    <a class="registerBtn" href="/users/register">Get started</a><br>
-    Already have an account? <a href="/users/login">Sign in.</a>
-</div>
-<br>
-<hr><br>
-<br>
-<hr><br>
+<!--<div class="regisbtnDiv">-->
+<!--    <a class="registerBtn" href="/users/register">Get started</a><br>-->
+<!--    Already have an account? <a href="/users/login">Sign in.</a>-->
+<!--</div>-->
+<!--<br>-->
+<!--<hr>-->
 
 <%- include("partials/footer") %>
