--- a/SRC/views/logoutpage.ejs
+++ b/SRC/views/logoutpage.ejs
@@ -1,14 +1,63 @@
-<%- include("partials/header") %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Post-it</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,600,700&display=swap" rel="stylesheet">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
 
-<!-- Top Navbar -->
-<div class="topnav">
-    <a id="homeNav" class="active" href="/dashboard"><i class="fas fa-blog"></i>post it</a>
-    <a href="/users/newblog">New Post</a>
-    <a id="signinLink" href="/logout">Log out</a>
+</head>
+<body>
+<img class="vector1"
+     src="https://raw.githubusercontent.com/vitamin2025/micro-blogging-website/main/POST-IT/assests/Vector.png"
+     alt="vector">
+
+<img class="image1"
+     src="https://raw.githubusercontent.com/vitamin2025/micro-blogging-website/main/POST-IT/assests/SeekPng%209.png"
+     alt="image">
+<div class="postit">
+    <div class="content">
+        <div class="title">
+            <img src="https://raw.githubusercontent.com/vitamin2025/micro-blogging-website/main/POST-IT/exp/SeekPng%201.png"
+                 alt="">
+            <div class="titleText">Post-It</div>
+        </div>
+        <div class="desc">
+            Post-It is a Micro-Blogging
+            platform where users can
+            express themselves.
+        </div>
+    </div>
+    <div class="login">
+        <a href="/dashboard">
+            <button class="button">Dashboard</button>
+        </a>
+        <a href="/logout">
+            <button class="button">Logout</button>
+        </a>
+    </div>
+
 </div>
-<div id="logoutpageDiv">
-    <a class="readMore-btn" href="/logout">Logout and redirect to home</a>
-    <a class="delete-btn" href="/dashboard">Go to dashboard</a>
-</div>
+<script src="" async defer></script>
+
+
+<!--&lt;!&ndash; Top Navbar &ndash;&gt;-->
+<!--<div class="topnav">-->
+<!--    <a id="homeNav" class="active" href="/dashboard"><i class="fas fa-blog"></i>post it</a>-->
+<!--    <a href="/users/newblog">New Post</a>-->
+<!--    <a id="signinLink" href="/logout">Log out</a>-->
+<!--</div>-->
+<!--<div id="logoutpageDiv">-->
+<!--    <a class="readMore-btn" href="/logout">Logout and redirect to home</a>-->
+<!--    <a class="delete-btn" href="/dashboard">Go to dashboard</a>-->
+<!--</div>-->
 
 <%- include("partials/footer") %>
