--- a/SRC/views/register.ejs
+++ b/SRC/views/register.ejs
@@ -1,32 +1,96 @@
-<%- include("partials/header") %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0">
+    <title>Register Page</title>
+    <link rel="stylesheet" href="/stylesheets/userforms.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,600,700&display=swap" rel="stylesheet">
+</head>
+<body>
 
-<div class="topnav">
-    <a id="homeNav" class="active" href="/"><i class="fas fa-blog"></i> post it</a>
-    <a href="/users/newblog">New Post</a>
-    <a id="signinLink" href="/users/login">Sign in</a>
-</div>
-
-<div class="formDivLr">
-    <form class="lrform" action="/users/register" method="POST">
-        <div class="container1">
-            <h1>Sign up</h1>
-            <label for="inputName"><strong>Name</strong></label>
-            <input id="inputName" type="text" name="name" placeholder="Enter Name">
-            <label for="inputEmail"><strong>Email</strong></label>
-            <input id="inputEmail" type="email" name="email" placeholder="Enter Email">
-            <label for="inputPassword"><strong>Password</strong></label>
-            <input id="inputPassword" type="password" name="password" placeholder="Enter Password">
-            <label for="inputPassword"><strong>Repeat Password</strong></label>
-            <input id="inputPassword" type="password" name="password2" placeholder="Confirm Password">
-            <button class="lrform-btn" type="submit">Sign up</button>
-        </div>
-        <div class="container1">
-            <a href="/">
-                <button type="button" class="cancelbtn">Cancel</button>
+<div class="container2">
+    <div class="form">
+        <form action="/users/register" method="POST">
+            <div class="register_name">
+                Register
+            </div>
+            <div class="name_area">
+                <div class="full_name">
+                    Full Name
+                </div>
+                <input id="inputName" type="text" name="name" placeholder="Ranadheer Makkena" required>
+            </div>
+            <br>
+            <br>
+            <!--            <div class="gender">-->
+            <!--                <fieldset required>-->
+            <!--                    <legend>Gender</legend>-->
+            <!--                    <div class="gender_btns">-->
+            <!--                        Male: <input type="radio" name="gender" id="male">-->
+            <!--                        Female: <input type="radio" name="gender" id="female">-->
+            <!--                    </div>-->
+            <!--                </fieldset>-->
+            <!--            </div>-->
+            <!--            <br>-->
+            <!--            <br>-->
+            <!--            <div class="age_area">-->
+            <!--                <div class="age">-->
+            <!--                    Age-->
+            <!--                </div>-->
+            <!--                <input type="number" name="age" id="age" required placeholder="18">-->
+            <!--            </div>-->
+            <!--            <br>-->
+            <!--            <br>-->
+            <div class="email_area">
+                <div class="email">
+                    E-Mail
+                </div>
+                <input id="inputEmail" type="email" name="email" required placeholder="ranadheer2986@gmail.com">
+            </div>
+            <br>
+            <br>
+            <!--            <div class="username_area">-->
+            <!--                <div class="username">-->
+            <!--                    Username-->
+            <!--                </div>-->
+            <!--                <input type="text" name="username" placeholder="Ranadheer" required>-->
+            <!--            </div>-->
+            <!--            <br>-->
+            <!--            <br>-->
+            <div class="password_area">
+                <div class="password">
+                    Password
+                </div>
+                <input id="inputPassword" type="password" name="password" placeholder="xyz123" required>
+            </div>
+            <br>
+            <br>
+            <div class="c_password_area">
+                <div class="password">
+                    Confirm Password
+                </div>
+                <input id="inputPassword" type="password" name="password2" placeholder="xyz123" required>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="button">
+                <button class="login_btn">Register</button>
+            </div>
+        </form>
+        <div class="extra_button-r">
+            <br>
+            Already have account?
+            <br>
+            <a href="/users/login">
+                <button class="login_btn">Login</button>
             </a>
-            <span class="lowerText">Already have an account? <a href="/users/login">Sign in.</a></span>
         </div>
-    </form>
+    </div>
 </div>
+
 
 <%- include("partials/footer") %>
