--- a/SRC/public/stylesheets/home.css
+++ b/SRC/public/stylesheets/home.css
@@ -57,6 +57,7 @@ body {
 }
 
 .desc {
+    margin-top: 20px;
     font-size: 20px;
     color: #ffffff;
 }
@@ -82,5 +83,12 @@ body {
 }
 
 .button {
+    background: transparent;
+    border: 0px;
+    color: #ffffff;
+    font-size: 18px;
+}
 
+.button:hover {
+    cursor: pointer;
 }
