--- a/SRC/views/dashboard.ejs
+++ b/SRC/views/dashboard.ejs
@@ -48,13 +48,13 @@
         </a>
         <div class="explore">
             <img class="logo2"
-                 src="https://vitamin2001.in/softengg/compass.png"
+                 src="https://vitamin2001.in/softengg/around-the-world.gif"
                  alt="">
             <h2 class="explore_text">Explore</h2>
         </div>
         <div class="settings">
             <img class="logo3"
-                 src="https://vitamin2001.in/softengg/settings.png"
+                 src="https://vitamin2001.in/softengg/settings.gif"
                  alt="">
             <h2 class="settings_text">Settings</h2>
         </div>
@@ -100,7 +100,7 @@
         </div>
         <div class="trending">
             <img class="r_logo2"
-                 src="https://vitamin2001.in/softengg/Vector%20%282%29.png"
+                 src="https://vitamin2001.in/softengg/lightning.png"
                  alt="">
             <h2 class="trending_text">Trending</h2>
         </div>
@@ -131,26 +131,27 @@
                      alt="img" class="placehold_image">
                 <div class="namebox">
                     <div class="pic_name">
-                        Name
+                        Ranadheer
                     </div>
                     <div class="pic_tag">
-                        @Name123
+                        @Ranadheer123
                     </div>
                 </div>
             </div>
-            <span class="material-symbols-outlined">
-                    edit_square
-                </span>
+            <!--            <span class="material-symbols-outlined">-->
+            <!--                    edit_square-->
+            <!--                </span>-->
+            <img class="edit_square" src="https://vitamin2001.in/softengg/edit_square.png" alt="img">
         </div>
         <form action="/users/newblog" method="POST">
             <div class="container1">
-                <label for="inputTitle"><strong>Title*</strong></label>
-                <input id="inputTitle" type="text" name="title" placeholder="Title">
-                <br>
-                <!--                <label for="inputImg"><strong>Image URL</strong></label>-->
-                <!--                <input id="inputImg" type="text" name="img" placeholder="Image Url">-->
-                <label for="inputText"><strong>Text*</strong></label>
-                <textarea id="inputText" name="text" rows="10"></textarea>
+                <!--                <label for="inputTitle"><strong>Title*</strong></label> <br>-->
+                <!--                <input class="post_title_input" id="inputTitle" type="text" name="title" placeholder="Title">-->
+                <!--                <br>-->
+                <!--                &lt;!&ndash;                <label for="inputImg"><strong>Image URL</strong></label>&ndash;&gt;-->
+                <!--                &lt;!&ndash;                <input id="inputImg" type="text" name="img" placeholder="Image Url">&ndash;&gt;-->
+                <!--                <label for="inputText"><strong>Text*</strong></label> <br>-->
+                <textarea class="post_text_input" id="inputText" name="text" rows="10"></textarea>
                 <!--                <label for="inputCat"><strong>Category* </strong></label>-->
                 <!--                <select id="inputCat" name="category">-->
                 <!--                    <option value="Technology">Technology</option>-->
@@ -164,7 +165,8 @@
                 <!--                    <option value="Relationships">Relationships</option>-->
                 <!--                    <option value="Politics">Politics</option>-->
                 <!--                </select>-->
-                <button class="lrform-btn" type="submit">Post</button>
+                <input type="hidden" id="inputCat" name="category" value="Technology">
+                <button class="post_btn_input" type="submit">Post</button>
             </div>
         </form>
     </div>
@@ -191,13 +193,13 @@
                         </div>
                     </div>
                     <div class="random_info">
-                        <h3>                       <%= blog.title %>  </h3>
+                        <!--                        <h3>                       <%= blog.title %>  </h3>-->
                         <!--                        <img class="image" src="<%= blog.imgURL %>"><br>-->
                         <%= blog.blogText.substring(0, 100) %>
                     </div>
                     <div class="like_comm">
-                        <img src="https://vitamin2001.in/softengg/like.png" alt="like" class="like_btn">
-                        <img src="https://vitamin2001.in/softengg/comment.png" alt="img" class="comment_btn">
+                        <img src="https://vitamin2001.in/softengg/heart.png" alt="like" class="like_btn">
+                        <img src="https://vitamin2001.in/softengg/chat.png" alt="img" class="comment_btn">
                         <!--                        <span id="author-span">By  on <%= blog.dateofPublish %></span>-->
                         <!--                        <span id="category-span">Category: <%= blog.category %></span>-->
                     </div>
