--- a/POST-IT/post_it1.css
+++ b/POST-IT/post_it1.css
@@ -431,6 +431,18 @@ color: #FFFFFF;
     cursor: pointer;
 }
 
+
+
+
+
+
+.explr_img{
+    width: 700px;
+    height: 250px;
+    border-radius: 50px;
+    margin-left: 4px;
+}
+
 /* Middle part by Ranadheer, Shivaji and Hemanth*/
 
 
